Wed Mar 30 11:53:58 EST 2005	JK Lowden <jklowden@schemamania.org>
	* src/tds/Makefile.am reformatted

Wed Mar 30 11:20:38 EST 2005	JK Lowden <jklowden@schemamania.org>
	* src/tds/Makefile.am build num_limits.h with Perl (for CVS)

Wed Mar 30 10:10:43 EST 2005	JK Lowden <jklowden@schemamania.org>
	* src/dblib/dblib.c remove broken casts

Wed Mar 30 12:57:02 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/ct.c:
	- remove warning
	- check datalen >= 0

Tue Mar 29 17:18:50 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/blk.c src/dblib/unittests/bcp.c:
	* src/odbc/odbc.c src/odbc/unittests/genparams.c:
	* src/odbc/unittests/insert_speed.c src/odbc/unittests/params.c:
	* src/odbc/unittests/prepare_results.c src/odbc/unittests/preperror.c:
	* src/odbc/unittests/raiserror.c src/odbc/unittests/t0003.c:
	* src/odbc/unittests/tables.c src/odbc/unittests/timeout.c:
	* src/odbc/unittests/transaction.c src/tds/query.c:
	* src/tds/unittests/utf8_1.c src/tds/unittests/utf8_2.c:
	- remove some warnings

Tue Mar 29 11:57:50 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/server/query.c src/ctlib/blk.c:
	- remove some warnings

Mon Mar 28 09:52:42 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/convert.c src/tds/unittests/convert.c:
	- optimizations for char -> numeric conversions

Fri Mar 25 17:21:07 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/convert.c:
	- use new function to change scale/precesion
	* src/tds/numeric.c:
	- use asm to improve performance on Intel

Thu Mar 24 15:43:14 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/numeric.c src/tds/numeric.pl:
	* src/tds/unittests/numeric.c:
	- change precision and scale of numeric together

Wed Mar 23 17:50:56 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/Makefile.am: fix distribution
	* src/tds/numeric.c: fix compile, remove ugly goto
